---------------------------------------------------------------------------------------------------
Version: 1.8.6
Date: ???
  Bugfixes:
    - Spidertron corpses now keep the spidertron's color (thanks to PrestonLeeC for providing the solution!)
---------------------------------------------------------------------------------------------------
Version: 1.8.5
Date: 17 May 2022
  Bugfixes:
    - Fixed crash when removing spidertron after issuing a pathfind command
---------------------------------------------------------------------------------------------------
Version: 1.8.4
Date: 3 May 2022
  Features:
    - Added patrol remote pipette when Spidertron Patrols is installed ('Control + Shift + Q' by default)
  Bugfixes:
    - Fixed being able to toggle into a spidertron in editor mode or Space Exploration's star map
    - Fixed 'Call last used spidertron' shortcut being enabled before any interactions with spidertrons
---------------------------------------------------------------------------------------------------
Version: 1.8.3
Date: 17 February 2022
  Bugfixes:
    - Fixed 'Tips & Tricks' simulation (requires 'Simulation Helper' mod to view)
  Locale:
    - Added complete Russian translations (thanks SeptiSe7en on Crowdin!)
---------------------------------------------------------------------------------------------------
Version: 1.8.2
Date: 28 January 2022
  Minor Features:
    - Added "Player already contains a spidertron" warning when trying to quick-toggle a second spidertron
    - 'Shift + Q' (Spidertron remote pipette) now plays sound clearing the cursor
  Bugfixes:
    - Fixed crash when quick-toggling into a spidertron type that no longer exists (due to mods being changed or unloaded)
---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 21 January 2022
  Features:
    - Spidertron pathfinder now navigates around Space Exploration's empty space