@@ -3,6 +3,7 @@ Version: 1.8.6
 Date: ???
   Bugfixes:
     - Spidertron corpses now keep the spidertron's color (thanks to PrestonLeeC for providing the solution!)
+    - Fixed robots from Combat Robots Overhaul generating spidertron corpses on death
 ---------------------------------------------------------------------------------------------------
 Version: 1.8.5
 Date: 17 May 2022
